--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/ChangedKonfigPlan.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/ChangedKonfigPlan.cshtml
@@ -430,7 +430,7 @@
         if (value == "Vorhangschloss") {
             TypeSylinder.src = "/Image/vorhangschloss.png";
         }
-        if (value == "Aussenzylinder_Rundzylinder") {
+        if (value == "Aussenzylinder") {
 
             TypeSylinder.src = "/Image/aussenzylinder.png";
         }
