--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -320,10 +320,10 @@
         {
             TypeSylinder.src = "/Image/vorhangschloss.png";
         }
-        if (value == "Aussenzylinder_Rundzylinder") 
+        if (value == "Aussenzylinder") 
         {
           
-            TypeSylinder.src =  "/Image/aussenzylinder.png";
+            TypeSylinder.src = "/Image/aussenzylinder.png";
         }
 
     }
