--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -13,5 +13,8 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
 
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalOrderNavClass(ViewContext)" id="personal-data" asp-page="./PagePersonalOrders">Personal Orders</a></li>
+    
+    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalOrderNavClass(ViewContext)" id="personal-data" asp-page="./HistoriOrders">Histori Orders</a></li>
+
 </ul>
 @*     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li> *@
