--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -81,9 +81,33 @@ body {
     font-style: normal;
     font-variation-settings: "slnt" 0;
 }
+#hederBlockOrder{
+    display:flex;
+}
+#orderCostHeader 
+{
+    margin-left: 400px;
+    gap: 50px;
+    display: flex;
+}
+#producktInfo {
+    display: flex;
+    gap: 50px;
+}
+#countOrderSysteam {
+    outline:none;
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 55px;
+    height: 40px;
+}
+#costedInfo {
+    display: flex;
+    margin-left: 140px;
+}
 
 
-#add_And_Minus{
+#add_And_Minus {
     background: red;
 }
 
@@ -133,6 +157,41 @@ a {
     grid-template-columns: repeat(2,auto);
     gap: 50px;
 }
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+/* Modal content */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+}
+
+/* Close button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
 #input {
     margin-top: 50px;
